# learn

./: .cursorrules  .gitignore  README.md  tasks.json  topics.txt
awk/: awk.sh  employees.txt  salaries.txt  tasks-and-hours.txt
bash/: current_file.sh  get_opts.sh  heredocs_and_cat.sh
c/: address_args_and_returns.c  asterisks.c  circular_buffer.c  flex-array-members.c  fork_exec.c  funcptr_macro_arrayparams.c  hash_table.c  hash_table.h  heap.c  isaac.c  linked_list.c  linked_list.h  main.c.bak  malloc_free.c  processes.c  size_and_type.c  stack_and_sleep.c  struct-bit-fields.c  tcp_client.c  tcp_server.c  topics.txt  variable_sized_array.c  what.c
content_from_claude/: .memory-tutorial.c.swp  memory-tutorial.c
docker/: docker-compose.yaml  tutorial.md
electron/: index.html  main.js  package.json  preload.js  renderer.js
external_content/: isaac.c  memory-tutorial.c
kafka-python/: README.txt  consumer.py  hello.py  producer.py
learn_direnv/: .envrc  README.txt  hello.py
learn_make/: README.txt  beauty.c  wonder.c
linux_dev/: Dockerfile  README.md  docker-compose.yaml  lazy_start_linux.sh  linux_bash.sh
llm-tool/: README.md  hello.py  pyproject.toml
mcp_servers/: README.md  client.py  pyproject.toml  saunit.py
next-react-tailwind/: README.md  get_context.sh  package-lock.json  package.json  topics.txt
node-npm/: hello.txt  package.json
node-npm-react/: hello.js
postgres/: README.txt  dvd_schema.sql  explain.sql  indexes.sql  notes.txt  (+5 more)
puzzles/: .pre-commit-config.yaml  longest_of_2.py  longest_of_N.py  merge_sort.py  pyproject.toml
(+83 files in other folders)
